--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@primevue/forms": "^4.2.5",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
     "quill": "^2.0.3",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.2.5",
