--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@primevue/forms": "^4.2.5",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
