Completed article filter

--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@primevue/forms": "^4.2.5",
-    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
+    "qalendar": "^3.9.0",
     "quill": "^2.0.3",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-primeui": "^0.3.4",
