--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "quill": "^2.0.3",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-primeui": "^0.3.4",
+    "v3-infinite-loading": "^1.3.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "zod": "^3.24.1"
