--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primevue/forms": "^4.2.5",
     "chart.js": "^4.4.7",
+    "country-codes-list": "^2.0.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "pinia": "^2.3.1",
