--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "country-codes-list": "^2.0.0",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.1.1",
